--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,8 @@ gradle.properties
 *.tar.gz
 *.rar
 
-.dokka
-.dokka/**
+dokka
+dokka/**
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
