--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -4,9 +4,34 @@ on:
     tags:
       - v3.**.**
 jobs:
-  publish-snapshot:
+  run-test:
+    name: Run Test
+    runs-on: ubuntu-latest
+    steps:
+      # 检出仓库代码
+      - name: Check Out Repo
+        uses: actions/checkout@v2
+
+      # setup Java
+      - name: Setup Java
+        uses: actions/setup-java@v2
+
+        with:
+          distribution: 'temurin'
+          java-version: 8
+
+      # setup Gradle
+      - name: Gradle Run Test
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.4
+          arguments: clean build test
+
+
+  publish-releases:
     name: Publish Release
     runs-on: ubuntu-latest
+    needs: run-test
     steps:
       # 检出仓库代码
       - name: Check Out Repo
@@ -30,12 +55,12 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 7.4
-          arguments: clean build test publishToSonatype closeAndReleaseStagingRepository -DreleaseOnly -DisSnapshot=false -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
+          arguments: clean build publishToSonatype closeAndReleaseStagingRepository -DreleaseOnly -DisSnapshot=false -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
 
   create-release:
     name: Create release
     runs-on: ubuntu-latest
-    needs: publish-snapshot
+    needs: publish-releases
     permissions:
       contents: write
     steps:
@@ -52,5 +77,33 @@ jobs:
           prerelease: ${{ contains(github.ref_name, 'preview') || contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') }}
           # draft: true
 
+  publish-snapshot:
+    name: Publish snapshot
+    runs-on: ubuntu-latest
+    needs: publish-releases
+    steps:
+      # 检出仓库代码
+      - name: Check out repo
+        uses: actions/checkout@v2
+
+      # setup Java
+      - name: Setup java
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: 8
+
+      # the gpg
+      - name: Decode gpg file
+        run: |
+          echo "${{ secrets.GPG_B64 }}" > ForteScarlet.gpg.b64
+          base64 -d ForteScarlet.gpg.b64 > ForteScarlet.gpg
+
+      # setup Gradle
+      - name: Gradle publish snapshot
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 7.4
+          arguments: clean publishToSonatype closeAndReleaseStagingRepository -DsnapshotOnly -DisSnapshot=true -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
 
 
