跟进更新，调整依赖规则

--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -3,8 +3,10 @@ on:
   push:
     branches:
       - main
+      - dev-snapshot**
     paths:
       - '**src/main/kotlin/**.kt'
+      - '**.kts'
       - '**src/main/java/**.java'
 
 jobs:
