--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -5,6 +5,9 @@ on: # push
       - doc**
       - v3.*.*
 
+env:
+  SIMBOT_IS_SNAPSHOT: false
+
 jobs:
   deploy-doc:
     name: Deploy-doc
@@ -34,7 +37,7 @@ jobs:
       - name: Gradle generate documentation
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4
+          gradle-version: 7.4.2
           arguments: clean build dokkaHtmlMultiModuleAndPost -DisSnapshot=false
 
       - name: Push to doc repository
