--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -10,6 +10,16 @@ on:
       - '**.kts'
       - '**src/main/java/**.java'
 
+env:
+  GPG_KEY_ID: ${{ secrets.SIGN_KEY_ID }}
+  GPG_SECRET_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+  GPG_PASSWORD: ${{ secrets.SIGN_PASS }}
+  OSSRH_USER: ${{ secrets.OSS_USERNAME }}
+  OSSRH_PASSWORD: ${{ secrets.OSS_PASSWORD }}
+  SIMBOT_IS_SNAPSHOT: true
+  SIMBOT_SNAPSHOT_ONLY: true
+
+
 jobs:
   publish-snapshot:
     name: Publish Snapshot
@@ -26,12 +36,6 @@ jobs:
           distribution: 'temurin'
           java-version: 8
 
-      # the gpg
-      - name: Decode Gpg File
-        run: |
-          echo "${{ secrets.GPG_B64 }}" > ForteScarlet.gpg.b64
-          base64 -d ForteScarlet.gpg.b64 > ForteScarlet.gpg
-
       # create properties
       - name: Create gradle.properties
         run: |
@@ -43,6 +47,6 @@ jobs:
       - name: Gradle Publish Snapshot
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4
+          gradle-version: 7.4.2
           arguments: clean build test publishToSonatype closeAndReleaseStagingRepository -DsnapshotOnly -DisSnapshot=true -Psigning.secretKeyRingFile=ForteScarlet.gpg -Psigning.keyId=${{ secrets.SIGN_KEY_ID }} -Psigning.password=${{ secrets.SIGN_PASS }} -Psonatype.username=${{ secrets.OSS_USERNAME }} -Psonatype.password=${{ secrets.OSS_PASSWORD }}
 
