feat(core): 更新mirai版本到 [v2.12.1](https://github.com/mamoe/mirai/releases/tag/v2.12.1)

--- a/simbot-component-mirai-core/bot.config.json
+++ b/simbot-component-mirai-core/bot.config.json
@@ -677,6 +677,11 @@
           ],
           "description": "消息撤回缓存策略",
           "default": "INVALID"
+        },
+        "accountSecrets": {
+          "type": "boolean",
+          "default": false,
+          "description": "是否禁用account.secrets"
         }
       }
     }
