refactor: bot.config.json调整

--- a/simbot-component-mirai-core/bot.config.json
+++ b/simbot-component-mirai-core/bot.config.json
@@ -241,6 +241,7 @@
                 "simbot_random",
                 "random",
                 "resource",
+                "file_based",
                 "object",
                 "simple_object"
               ],
