--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -20,7 +20,7 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
       # setup Java
-      - name: Setup java
+      - name: Setup java 11
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
@@ -37,7 +37,7 @@ jobs:
       - name: Gradle generate documentation
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4.2
+          gradle-version: 7.5.1
           arguments: clean build dokkaHtmlMultiModuleAndPost -DisSnapshot=false
 
       - name: Push to doc repository
