--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -23,18 +23,18 @@ jobs:
         uses: actions/checkout@v2
 
       # setup Java
-      - name: Setup Java
+      - name: Setup Java 11
         uses: actions/setup-java@v2
 
         with:
           distribution: 'temurin'
-          java-version: 8
+          java-version: 11
 
       # setup Gradle
       - name: Gradle Run Test
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4.2
+          gradle-version: 7.5.1
           arguments: clean build test
 
 
@@ -48,17 +48,17 @@ jobs:
         uses: actions/checkout@v2
 
       # setup Java
-      - name: Setup Java
+      - name: Setup Java 11
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: 8
+          java-version: 11
 
       # setup Gradle
       - name: Gradle Publish Release
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4.2
+          gradle-version: 7.5.1
           arguments: publishToSonatype closeAndReleaseStagingRepository --warning-mode all --info -Porg.gradle.jvmargs="org.gradle.jvmargs=-Xmx4G -Xms4G -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8"
         env:
           SIMBOT_IS_SNAPSHOT: false
@@ -95,11 +95,11 @@ jobs:
         uses: actions/checkout@v2
 
       # setup Java
-      - name: Setup java
+      - name: Setup java 11
         uses: actions/setup-java@v2
         with:
           distribution: 'temurin'
-          java-version: 8
+          java-version: 11
 
       # the gpg
       - name: Decode gpg file
@@ -111,7 +111,7 @@ jobs:
       - name: Gradle publish snapshot
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 7.4.2
+          gradle-version: 7.5.1
           arguments: clean publishToSonatype closeAndReleaseStagingRepository
         env:
           SIMBOT_IS_SNAPSHOT: true
