--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -8,7 +8,9 @@ simbot = "3.0.0-beta.3"
 [libraries]
 
 # simbot
+simbot-api = { group = "love.forte.simbot", name = "simbot-api", version.ref = "simbot" }
 simbot-core = { group = "love.forte.simbot", name = "simbot-core", version.ref = "simbot" }
+simbot-logger = { group = "love.forte.simbot", name = "simbot-logger", version.ref = "simbot" }
 
 # mirai
 mirai = "net.mamoe:mirai-core:2.12.1"
