--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,21 +1,5 @@
-#
-#  Copyright (c) 2022 ForteScarlet <ForteScarlet@163.com>
-#
-#  ???? simbot-component-mirai ?????
-#
-#  simbot-component-mirai ??????????????/?????????????? GNU ???????????????? 3 ??????????????????????
-#
-#  ?? simbot-component-mirai ??????????????;???????????????????????? GNU ?????????????
-#
-#  ?????????? GNU ??????????????????:
-#  https://www.gnu.org/licenses
-#  https://www.gnu.org/licenses/gpl-3.0-standalone.html
-#  https://www.gnu.org/licenses/lgpl-3.0-standalone.html
-#
-#
-
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.5.1-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.6-all.zip
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
