--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -7,7 +7,7 @@ openjdk-jmh = "1.35"
 [libraries]
 
 # mirai
-mirai = "net.mamoe:mirai-core:2.13.0-RC2"
+mirai = "net.mamoe:mirai-core-jvm:2.13.2"
 
 # kotlinx-serialization
 kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
