--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -1,9 +1,6 @@
 name: Deploy doc
 on: # push
-  push:
-    tags:
-      - doc**
-      - v3.*.*
+  push: pref_kdoc_deploy
 
 env:
   SIMBOT_IS_SNAPSHOT: false
@@ -23,15 +20,8 @@ jobs:
       - name: Setup java 11
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'zulu'
           java-version: 11
-          cache: 'gradle'
-
-      - name: Create gradle.properties
-        run: |
-          echo "org.gradle.parallel=true" > gradle.properties
-          echo "org.gradle.workers.max=16" >> gradle.properties
-          echo "org.gradle.jvmargs=-Xmx8G -Xms2G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8" >> gradle.properties
 
       # setup Gradle
       - name: Gradle generate documentation
@@ -39,21 +29,23 @@ jobs:
         with:
           gradle-version: 7.6
           arguments: |
-            dokkaHtmlMultiModule
+            -Porg.gradle.jvmargs="-Xmx4g -Xms4g -XX:MaxMetaspaceSize=2g -Dfile.encoding=UTF-8" 
+            -Porg.gradle.daemon=false
             --info 
             --warning-mode all
             -x test
             --build-cache
-            -Porg.gradle.jvmargs="-Xmx4g -Xms4g -XX:MaxMetaspaceSize=2g -Dfile.encoding=UTF-8"
-            -Porg.gradle.daemon=false
-            env:
-            SIMBOT_IS_SNAPSHOT: false
+            dokkaHtmlMultiModule
+        env:
+          SIMBOT_IS_SNAPSHOT: false
 
       - name: Push to doc repository
         uses: peaceiris/actions-gh-pages@v3
         with:
           personal_token: ${{ secrets.PUSH_TOKEN }}
-          external_repository: simple-robot-library/simbot3-component-mirai-apiDoc
-          publish_branch: gh-pages  # default: gh-pages
+          external_repository: simple-robot-library/simbot3-api-docs
+          publish_branch: kdoc-deploy-component-mirai
           publish_dir: ./build/dokka/html
-          full_commit_message: Publish ${{ github.ref_name }} documentation
+          # deploy to sub dir
+          destination_dir: components/mirai
+
