--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Push to doc repository
         uses: peaceiris/actions-gh-pages@v3
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           personal_token: ${{ secrets.PUSH_TOKEN }}
           external_repository: simple-robot-library/simbot3-api-docs
           publish_branch: kdoc-deploy/component-mirai
