--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -14,9 +14,10 @@ jobs:
       # 检出仓库代码
       - name: Check out repo
         uses: actions/checkout@v3
-        with:
-          persist-credentials: false
-          fetch-depth: 0
+#        with:
+#          persist-credentials: false
+#          fetch-depth: 0
+
       # setup Java
       - name: Setup java 11
         uses: actions/setup-java@v3
@@ -43,11 +44,9 @@ jobs:
       - name: Push to doc repository
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           personal_token: ${{ secrets.PUSH_TOKEN }}
           external_repository: simple-robot-library/simbot3-api-docs
           publish_branch: kdoc-deploy/component-mirai
           publish_dir: ./build/dokka/html
           # deploy to sub dir
           destination_dir: components/mirai
-          full_commit_message: 'Deploy Component Mirai KDoc'
