pref: kdoc deploy

--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -50,3 +50,4 @@ jobs:
           publish_dir: ./build/dokka/html
           # deploy to sub dir
           destination_dir: components/mirai
+          user_email: 'ForteScarlet@163.com'
