--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -52,3 +52,4 @@ jobs:
           destination_dir: components/mirai
           user_name: 'ForteScarlet'
           user_email: 'ForteScarlet@163.com'
+          exclude_assets: '.github,.nojekyll'
