--- a/.github/workflows/kdoc.yml
+++ b/.github/workflows/kdoc.yml
@@ -48,4 +48,5 @@ jobs:
           external_repository: simple-robot-library/simbot3-api-docs
           publish_branch: kdoc-deploy/component-mirai
           publish_dir: ./build/dokka/html
-          exclude_assets: '.github,.nojekyll'
+          # deploy to sub dir
+          destination_dir: components/mirai
