--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -96,6 +96,7 @@ jobs:
         with:
           personal_token: ${{ secrets.PUSH_TOKEN }}
           external_repository: simple-robot-library/simbot3-api-docs
+          publish_branch: kdoc-deploy/component-mirai
           publish_dir: ./build/dokka/html
           # deploy to sub dir
           destination_dir: components/mirai
