doc(website): 文档网站配置

--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -1,7 +1,9 @@
 name: Publish Release
 on:
   push:
-    branches: v3-dev
+    branches:
+      - main
+      - v*.*.*.**
   paths:
     - 'website/**'
 
