--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           node-version: 16.x
           cache: npm
+          cache-dependency-path: ./website/package-lock.json
 
       - run: |
           npm ci
