--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -5,6 +5,8 @@ on:
       - main
       - dev-snapshot**
       - v*.*.*.**
+      - dev/var/**
+
     paths:
       - '**src/main/kotlin/**.kt'
       - '**.kts'
