--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,7 +2,7 @@ name: Deploy Website
 on:
   push:
     branches:
-      - main
+#      - main
       - dev/ver/v**
     paths:
       - 'website/**'
