--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -2,8 +2,8 @@ name: Deploy Website
 on:
   push:
     branches:
-#      - main
       - dev/ver/v**
+      - dev/main
     paths:
       - 'website/**'
 
