--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
-kotlinx-coroutines = "1.6.4"
-kotlinx-serialization = "1.4.0"
+kotlinx-coroutines = "1.7.0"
+kotlinx-serialization = "1.5.0"
 spring-boot = "2.7.2"
 openjdk-jmh = "1.35"
 
 [libraries]
 
 # mirai
-mirai = "net.mamoe:mirai-core-jvm:2.14.0"
+mirai = "net.mamoe:mirai-core-jvm:2.15.0-M1"
 
 # kotlinx-serialization
 kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
