--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ openjdk-jmh = "1.35"
 [libraries]
 
 # mirai
-mirai = "net.mamoe:mirai-core-jvm:2.15.0-RC"
+mirai = "net.mamoe:mirai-core-jvm:2.15.0"
 
 # kotlinx-serialization
 kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
